fixed layout bugs

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -287,7 +287,7 @@ footer {
       width: 100%;
     }
     @media(min-width: 922px) {
-      width: 80%;
+      width: 83%;
     }
   }
 
@@ -818,7 +818,7 @@ footer {
   left: 0;
   width: 100%;
 
-  z-index: 20;
+  z-index: 100;
   padding: 1rem;
   font-size: 1.1em;
   font-weight: 700;
